fix(docs/navigation-menu): fix hint icon alignment

--- a/apps/doc/src/app/components/navigation-menu/examples/hint-button/hint-button.component.less
+++ b/apps/doc/src/app/components/navigation-menu/examples/hint-button/hint-button.component.less
@@ -1,7 +1,7 @@
 :host {
   &.hovered {
     prizm-icons-svg {
-      display: block;
+      display: flex;
     }
   }
 
